--- a/style.css
+++ b/style.css
@@ -131,6 +131,57 @@ nav .fa{display: none;}
         cursor: pointer;
     }
     .nav-links ul {padding: 30px;}
+}
 
+/* Course Section */
+.course
+{
+   width: 80%;
+   margin: auto;
+   text-align: center;
+   padding-top: 100px; 
+}
+h1
+{
+    font-size: 36px;
+    font-weight: 600;
+}
 
+p
+{
+    color: black;
+    font-size: 14px;
+    line-height: 22px;
+    padding: 10px;
+}
+.row
+{
+    display: flex;
+    justify-content: space-between;
+}
+.course-col
+{
+    flex-basis: 31%;
+    background: #fff3f3;
+    border-radius: 10%;
+    margin-top: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+h3
+{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.course-col:hover
+{
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+@media(max-width: 700px)
+{
+    .row{ flex-direction: column;}
 }
